projects/compiler/test/typechecker/enumdecl/error_duplicate_enum_type.abra
enum Foo { Bar }
type Foo { b: String }